--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>this is for githuv</title>
 </head>
 <body>
+    <header> <ul>
+        <li>git init</li>
+        <li>git add .</li>
+        <li>git commit</li>
     
+    </ul></header>
+    <main><H1>It's a git test</H1></main>
+    <footer>
+        <small><P>all rights reserved 303030</P></small>
+    </footer>
 </body>
 </html>
